--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,12 @@
   @apply flex bg-gray-800 h-4 w-[3rem] rounded-t-xl;
 }
 
+.btn-start {
+  @apply btn-card px-4 py-3 ring ring-orange-500 ring-offset-2 ring-offset-gray-100 rounded-full 
+        hover:ring-offset-orange-300 hover:ring-offset-4 hover:text-orange-400
+        transition-all duration-100 ease-in;
+}
+
 .input-primary {
   @apply border rounded-md px-4 py-2 focus:outline-none focus:border-blue-500 text-gray-300;
 }
@@ -45,9 +51,41 @@
 .extend {
   @apply h-[10rem];
 }
+.event-extension {
+  @apply transition-all duration-300 ease-in-out overflow-hidden text-gray-700 shadow;
+}
+
+.participantcard {
+  @apply  drop-shadow-lg shadow-xl p-2 rounded-xl;
+}
 
 .card {
   @apply shadow-xl p-[1px] rounded-lg hover:scale-105 cursor-pointer transition-all duration-100 ease-in;
+}
+
+.toggle-label {
+  @apply cursor-pointer;
+}
+
+.toggle-button {
+  @apply inline-block relative w-[2.5rem] h-[1.5rem] rounded-[1rem] bg-gray-300 transition-all duration-100 ease-in;
+  
+}
+
+.toggle-button::before {
+  @apply absolute w-[1.5rem] h-[1.5rem] bg-white content-[''] transition-all duration-200 ease-in-out rounded-full;
+}
+
+.toggled {
+  @apply bg-green-400;
+}
+
+.toggled::before {
+  @apply translate-x-[1rem];
+}
+
+.participant-toggle {
+  @apply ring-2 ring-green-500 shadow-md shadow-green-700 transition-all duration-300 ease-in;
 }
 
 @media (prefers-color-scheme: light) {
